[workspace]
resolver = "2"

members = [
    "unfound-macros",
    "unfound-fs",
    "xmodules/uvfs",
    "xmodules/ucache",
    "xmodules/unotify",
]

exclude = [
    "apps/unfound_fs_test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["unfound team"]
license = "Apache-2.0"
homepage = "https://github.com/unfound/unfound"
repository = "https://github.com/unfound/unfound"
documentation = "https://github.com/unfound/unfound"
keywords = ["os", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
# ArceOS 核心模块（供 arceos 子模块使用）
axalloc = { path = "arceos/modules/axalloc" }
axhal = { path = "arceos/modules/axhal" }
axfs = { path = "arceos/modules/axfs" }
axtask = { path = "arceos/modules/axtask" }
axlog = { path = "arceos/modules/axlog" }
axdriver = { path = "arceos/modules/axdriver" }
axconfig = { path = "arceos/modules/axconfig" }
axruntime = { path = "arceos/modules/axruntime" }
axsync = { path = "arceos/modules/axsync" }
axmm = { path = "arceos/modules/axmm" }
axnet = { path = "arceos/modules/axnet" }
axdisplay = { path = "arceos/modules/axdisplay" }
axns = { path = "arceos/modules/axns" }
axdma = { path = "arceos/modules/axdma" }
axipi = { path = "arceos/modules/axipi" }
