[package]
name = "unfound-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
axfs = { path = "../arceos/modules/axfs" }
unotify = { path = "../xmodules/unotify" }
ucache = { path = "../xmodules/ucache" }
unfound-macros = { path = "../unfound-macros" }
axerrno = { path = "../arceos/modules/axruntime/axerrno" }
spin = "0.9"
log = "0.4"

[features]
default = []
fs = ["axfs/myfs"]
