[package]
name = "unfound-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
axfs = { path = "../arceos/modules/axfs" }
unotify = { path = "../xmodules/unotify" }
unfound-macros = { path = "../unfound-macros" }
axerrno = "0.1"
log = "0.4"

[lib]
name = "unfound_fs"

[features]
default = []
fs = ["axfs/myfs"]