[package]
name = "axprocess"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS process management module"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axprocess"
documentation = "https://arceos-org.github.io/arceos/axprocess/index.html"

[features]
default = []

[dependencies]
log = "=0.4.21"
cfg-if = "1.0"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
axhal = { workspace = true }
axconfig = { workspace = true }
axtask = { workspace = true, features = ["multitask"] }
axsync = { workspace = true }
axmm = { workspace = true }
axns = { workspace = true }
memory_addr = "0.4"
