[package]
name = "uvfs"
version = "0.1.0"
edition = "2021"

[dependencies]
axerrno = "0.1"
axfs = { path = "../../arceos/modules/axfs", default-features = false }
log = "0.4"
spin = "0.9"
alloc = { package = "axalloc", path = "../../arceos/modules/axalloc", default-features = false }

[features]
default = []
